--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         text-align: center;
         font-size: 18px; /* Ukuran font H3 dasar */
         letter-spacing: 1px;
-        margin: 15px 0 5px 0; /* Jarak atas dan bawah untuk H3 */
+        margin: 15px 0 15px 0; /* Jarak atas dan bawah untuk H3 */
         color: white;
       }
 
@@ -129,6 +129,8 @@
       .slide {
         min-width: 100%;
         position: relative;
+        -webkit-backface-visibility: hidden; 
+        transform: translateZ(0);
       }
 
       .slide img {
@@ -226,7 +228,7 @@
       .link-image h4 { background-color: transparent; padding: 0 10px; margin: 0; font-size: 14px; font-weight: 500; }
 
       /* ----- Social Media Section ----- */
-      .social-container { display: grid; grid-template-columns: repeat(2, 1fr); gap: 15px; margin: 40px 0; align-items: start; }
+      .social-container { display: grid; grid-template-columns: repeat(2, 1fr); gap: 15px; margin: 20px 0; align-items: start; }
       .social-embed { text-align: center; width: 100%; max-height: 300px; overflow: hidden; }
       .social-embed blockquote { margin: 0 !important; }
       .social-embed iframe { width: 100%; height: 100%; border: none; }
@@ -528,6 +530,7 @@
     </script>
   </body>
 </html>
+
 
 
 
