--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         text-align: center;
         font-size: 18px; /* Ukuran font H3 dasar */
         letter-spacing: 1px;
-        margin: 15px 0 15px 0; /* Jarak atas dan bawah untuk H3 */
+        margin: 15px 0 5px 0; /* Jarak atas dan bawah untuk H3 */
         color: white;
       }
 
@@ -118,6 +118,8 @@
         aspect-ratio: 1280 / 800;
         box-shadow: 0 4px 10px rgba(0,0,0,0.1);
         margin-bottom: 30px;
+        background-color: var(--secondary-color);
+        transform: translateZ(0);
       }
 
       .slider {
@@ -256,7 +258,7 @@
         
         h3 {
             font-size: 18px;
-            margin-bottom: 15px;
+            margin-bottom: 5px;
         }
 
         .grid-item { padding: 10px 5px; min-height: auto; }
@@ -530,6 +532,7 @@
     </script>
   </body>
 </html>
+
 
 
 
