--- a/index.html
+++ b/index.html
@@ -111,25 +111,32 @@
 
       /* ----- Image Slider ----- */
       .slider-container {
-        width: 100%;
-        overflow: hidden;
         position: relative;
+        overflow: hidden;
+        width: 100%;
         border-radius: 10px;
         aspect-ratio: 1280 / 800;
-        box-shadow: 0 4px 10px rgba(0,0,0,0.1);
         margin-bottom: 30px;
-        transform: translateZ(0);
+        box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+        -webkit-transform-style: preserve-3d;
+        transform-style: preserve-3d;
+        background-color: transparent;
       }
 
       .slider {
         display: flex;
         transition: transform 0.5s ease-in-out;
         cursor: grab;
+        height: 100%;
+        background-color: transparent;
+        -webkit-backface-visibility: hidden;
+        transform: translateZ(0);
       }
 
       .slide {
         min-width: 100%;
         position: relative;
+        background-color: transparent;
         -webkit-backface-visibility: hidden; 
         transform: translateZ(0);
       }
@@ -139,6 +146,8 @@
         display: block;
         aspect-ratio: 1280 / 800;
         object-fit: cover;
+        -webkit-backface-visibility: hidden;
+        transform: translateZ(0);
       }
 
       /* ----- Grid Section ----- */
@@ -203,7 +212,7 @@
       .modal-content { background-color: var(--secondary-color); padding: 30px; border-radius: 10px; position: relative; width: 80%; max-width: 300px; max-height: 85vh; overflow-y: auto; box-shadow: 0 5px 20px rgba(0,0,0,0.5); color: #f0f0f0; }
       .modal-content h3 { font-size: 28px; margin-top: 0; margin-bottom: 15px; }
       .modal-content .modal-body { font-size: 16px; line-height: 1.7; }
-      .modal-close { position: absolute; top: 10px; right: 15px; font-size: 40px; font-weight: bold; color: #fff; cursor: pointer; }
+      .modal-close { position: absolute; top: 5px; right: 5px; font-size: 40px; font-weight: bold; color: #fff; cursor: pointer; }
       #modal6 .modal-content h3 { font-size: 28px; }
 
       /* ----- Chat Modal Specifics ----- */
@@ -531,6 +540,7 @@
     </script>
   </body>
 </html>
+
 
 
 
