--- a/index.html
+++ b/index.html
@@ -22,17 +22,27 @@
         margin: 0;
         font-family: 'Roboto', 'Segoe UI', Tahoma, sans-serif;
         color: var(--text-color);
-        background: linear-gradient(to bottom, var(--primary-color), var(--secondary-color));
-        position: relative;
+        background-color: var(--secondary-color); 
         min-height: 100vh;
         font-size: 16px;
         line-height: 1.6;
         -webkit-font-smoothing: antialiased;
       }
-
-      body::before {
+      
+      .main-background {
         content: '';
         position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1; 
+        background: linear-gradient(to bottom, var(--primary-color), var(--secondary-color));
+      }
+      
+      .main-background::before {
+        content: '';
+        position: absolute;
         top: 0;
         left: 0;
         width: 100%;
@@ -42,7 +52,6 @@
         background-position: center;
         opacity: 0.1;
         filter: grayscale(100%);
-        z-index: -1;
       }
 
       .container {
@@ -208,11 +217,12 @@
       }
 
       /* ----- Modal (Popup) Styling ----- */
-      .modal-overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.7); justify-content: center; align-items: center; z-index: 2000; }
+      .modal-overlay { display: flex; flex-direction: column; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.7); justify-content: center; align-items: center; z-index: 2000; }
       .modal-content { background-color: var(--secondary-color); padding: 30px; border-radius: 10px; position: relative; width: 80%; max-width: 300px; max-height: 85vh; overflow-y: auto; box-shadow: 0 5px 20px rgba(0,0,0,0.5); color: #f0f0f0; }
       .modal-content h3 { font-size: 28px; margin-top: 0; margin-bottom: 15px; }
       .modal-content .modal-body { font-size: 16px; line-height: 1.7; }
-      .modal-close { position: absolute; top: 0px; right: 7px; font-size: 40px; font-weight: bold; color: #fff; cursor: pointer; }
+      .modal-close { position: static; margin-top: 15px; background-color: rgba(255, 255, 255, 0.8); color: #0d3b5a; border-radius: 50%; width: 45px; height: 45px; font-size: 30px; font-weight: bold; display: flex; justify-content: center; align-items: center; line-height: 1; cursor: pointer; border: none; transition: transform 0.2s, background-color 0.2s; }
+      .modal-close:hover {background-color: white; transform: scale(1.1); }
       #modal6 .modal-content h3 { font-size: 28px; }
 
       /* ----- Chat Modal Specifics ----- */
@@ -392,11 +402,11 @@
 
     </main>
 
-    <div id="modal1" class="modal-overlay"><div class="modal-content"><span class="modal-close">&times;</span><h3></h3><div class="modal-body"></div></div></div>
-    <div id="modal2" class="modal-overlay"><div class="modal-content"><span class="modal-close">&times;</span><h3></h3><div class="modal-body"></div></div></div>
-    <div id="modal3" class="modal-overlay"><div class="modal-content"><span class="modal-close">&times;</span><h3></h3><div class="modal-body"></div></div></div>
-    <div id="modal4" class="modal-overlay"><div class="modal-content"><span class="modal-close">&times;</span><h3></h3><div class="modal-body"></div></div></div>
-    <div id="modal5" class="modal-overlay"><div class="modal-content"><span class="modal-close">&times;</span><h3></h3><div class="modal-body"></div></div></div>
+    <div id="modal1" class="modal-overlay"><div class="modal-content"><h3></h3><div class="modal-body"></div></div><span class="modal-close">&times;</span></div>
+    <div id="modal2" class="modal-overlay"><div class="modal-content"><h3></h3><div class="modal-body"></div></div><span class="modal-close">&times;</span></div>
+    <div id="modal3" class="modal-overlay"><div class="modal-content"><h3></h3><div class="modal-body"></div></div><span class="modal-close">&times;</span></div>
+    <div id="modal4" class="modal-overlay"><div class="modal-content"><h3></h3><div class="modal-body"></div></div><span class="modal-close">&times;</span></div>
+    <div id="modal5" class="modal-overlay"><div class="modal-content"><h3></h3><div class="modal-body"></div></div><span class="modal-close">&times;</span></div>
     <div id="modal6" class="modal-overlay">
         <div class="modal-content">
             <span class="modal-close">&times;</span>
@@ -540,6 +550,7 @@
     </script>
   </body>
 </html>
+
 
 
 
