--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       /* ----- Grid Section ----- */
       .grid-container {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
         gap: 15px;
         margin-top: 30px;
       }
@@ -571,4 +571,5 @@
     </script>
   </body>
 </html>
+
 
