--- a/index.html
+++ b/index.html
@@ -349,12 +349,12 @@
       <h3>Klik tombol di bawah untuk daftar Jastip!</h3>
       <section class="link-images-container">
         <div class="link-image">
-          <a href="https://script.google.com/macros/s/AKfycbyLV8KiXjaYszXkgCnuhx2cGeT4OY8knc9dVrWRqHwRy1AUbyh-ZXc5kGLZn5RzApSi/exec" target="_blank">
+          <a href="https://yanoshijapan.github.io/jastipindojepang/" target="_blank">
             <img src="https://yanoshijapan.github.io/jastip/idjp.png" alt="Jastip Indo - Jepang">
           </a>
         </div>
         <div class="link-image">
-          <a href="https://script.google.com/macros/s/AKfycbyLV8KiXjaYszXkgCnuhx2cGeT4OY8knc9dVrWRqHwRy1AUbyh-ZXc5kGLZn5RzApSi/exec?page=japan-indo" target="_blank">
+          <a href="https://yanoshijapan.github.io/jastipjepangindo/" target="_blank">
             <img src="https://yanoshijapan.github.io/jastip/jpid.png" alt="Jastip Jepang - Indo">
           </a>
         </div>
@@ -571,5 +571,6 @@
     </script>
   </body>
 </html>
+
 
 
