--- a/index.html
+++ b/index.html
@@ -10,27 +10,26 @@
     <style>
       /* ----- General Styling ----- */
       :root {
-        --primary-color: #076eb3; /* PERUBAHAN 3: Warna utama (biru) */
+        --primary-color: #076eb3; 
         --secondary-color: #0d3b5a;
-        --text-color: #076eb3;    /* PERUBAHAN 3: Warna teks utama (biru) */
-        --bg-color: #ffffff;      /* PERUBAHAN 1: Warna latar belakang (putih) */
+        --text-color: #076eb3;    
+        --bg-color: #ffffff;      
         --accent-color: #ffc107;
         --white: #ffffff;
-        --grid-item-bg: rgba(7, 110, 179, 0.1); /* Warna biru transparan untuk item grid */
+        --grid-item-bg: rgba(7, 110, 179, 0.1);
       }
 
       body {
         margin: 0;
         font-family: 'Roboto', 'Segoe UI', Tahoma, sans-serif;
-        color: var(--text-color); /* PERUBAHAN 3: Teks default menjadi biru */
+        color: var(--text-color); 
         min-height: 100vh;
         font-size: 16px;
         line-height: 1.6;
         -webkit-font-smoothing: antialiased;
-        background-color: var(--bg-color); /* PERUBAHAN 1: Latar belakang body jadi putih */
+        background-color: var(--bg-color); 
       }
       
-      /* PERBAIKAN: Div latar belakang gradien dan gambar dihapus karena tidak diperlukan lagi */
       .main-background {
         display: none;
       }
@@ -52,7 +51,7 @@
         font-size: 18px;
         letter-spacing: 1px;
         margin: 15px 0 5px 0;
-        color: var(--text-color); /* PERUBAHAN 3: Warna judul menjadi biru */
+        color: var(--text-color); 
       }
 
       /* ----- Header & Navigation ----- */
@@ -61,7 +60,7 @@
         justify-content: space-between;
         align-items: center;
         padding: 15px 20px;
-        background-color: var(--primary-color); /* PERUBAHAN 1: Header jadi biru agar logo putih terlihat */
+        background-color: var(--bg-color); /* PERUBAHAN: Header jadi putih */
         box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         position: sticky;
         top: 0;
@@ -84,8 +83,8 @@
       }
 
       .contact-btn-header {
-        background-color: var(--white); /* Tombol jadi putih */
-        color: var(--primary-color); /* Teks tombol jadi biru */
+        background-color: var(--primary-color); /* PERUBAHAN: Tombol jadi biru */
+        color: var(--white); /* PERUBAHAN: Teks tombol jadi putih */
         padding: 10px 20px;
         border-radius: 5px;
         text-decoration: none;
@@ -96,7 +95,7 @@
       }
 
       .contact-btn-header:hover {
-        background-color: #f0f0f0;
+        background-color: var(--secondary-color);
         transform: scale(1.05);
       }
 
@@ -122,13 +121,13 @@
       .grid-item:hover { transform: translateY(-5px); box-shadow: 0 6px 18px rgba(7, 110, 179, 0.2); }
       .icon-container { background-color: rgba(7, 110, 179, 0.1); border-radius: 50%; width: 120px; height: 120px; display: flex; align-items: center; justify-content: center; margin-bottom: 10px; transition: width 0.3s, height 0.3s; }
       .icon-container img { max-width: 90%; max-height: 90%; object-fit: contain; }
-      .grid-item h4 { margin: 0; padding: 0 5px; color: var(--text-color); font-size: 20px; font-weight: 700; text-shadow: none; transition: font-size 0.3s; }
+      .grid-item h4 { margin: 0; padding: 0 5px; color: var(--text-color); font-size: 17px; font-weight: 500; text-shadow: none; transition: font-size 0.3s; }
 
       /* ----- Modal (Popup) Styling ----- */
       .modal-overlay { display: none; flex-direction: column; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.6); justify-content: center; align-items: center; z-index: 2000; }
       .modal-content {
-        background-color: var(--bg-color); /* PERUBAHAN 2: Latar belakang pop-up jadi putih */
-        color: var(--text-color); /* PERUBAHAN 3: Teks pop-up jadi biru */
+        background-color: var(--bg-color); 
+        color: var(--text-color); 
         padding: 30px; border-radius: 10px; position: relative; width: 80%; max-width: 300px; max-height: 85vh; overflow-y: auto; box-shadow: 0 5px 20px rgba(0,0,0,0.5); 
       }
       .modal-content h3 { font-size: 28px; margin-top: 0; margin-bottom: 15px; color: var(--text-color); }
@@ -171,7 +170,7 @@
       .contact-admin-btn { display: inline-block; background-color: var(--accent-color); color: var(--secondary-color); padding: 20px 40px; border-radius: 50px; font-size: 22px; font-weight: bold; text-decoration: none; box-shadow: 0 4px 10px rgba(0,0,0,0.2); transition: transform 0.2s, box-shadow 0.2s; }
       .contact-admin-btn:hover { transform: translateY(-3px); box-shadow: 0 6px 15px rgba(0,0,0,0.25); }
 
-      /* PERUBAHAN 4: CSS untuk Animasi Scroll */
+      /* CSS untuk Animasi Scroll */
       .fade-in-section {
         opacity: 0;
         transform: translateY(30px);
@@ -202,6 +201,7 @@
     </style>
   </head>
   <body>
+    
     <header class="header">
       <div class="logo">
         <a href="#"><img src="https://yanoshijapan.github.io/jastip/jastip%202.png" alt="Logo Jastip"></a>
@@ -437,18 +437,16 @@
         closeButtons.forEach(button => { button.addEventListener('click', closeModal); });
         modals.forEach(modal => { modal.addEventListener('click', (event) => { if (event.target === modal) { closeModal(); } }); });
 
-        // PERUBAHAN 4: JavaScript untuk Animasi Scroll
+        // JavaScript untuk Animasi Scroll
         const sections = document.querySelectorAll('.fade-in-section');
         const observer = new IntersectionObserver((entries) => {
             entries.forEach(entry => {
                 if (entry.isIntersecting) {
                     entry.target.classList.add('is-visible');
-                    // Opsional: berhenti mengamati setelah animasi berjalan
-                    // observer.unobserve(entry.target); 
                 }
             });
         }, {
-            threshold: 0.1 // Animasi berjalan saat 10% elemen terlihat
+            threshold: 0.1
         });
 
         sections.forEach(section => {
