--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         /* ----- Grid Section (New Style) ----- */
         .grid-container {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            grid-template-columns: repeat(3, 1fr);
             gap: 20px;
             margin-top: 30px;
         }
@@ -327,7 +327,7 @@
         
         /* ----- Responsive Design ----- */
         @media (max-width: 768px) {
-            .grid-container { grid-template-columns: repeat(auto-fit, minmax(120px, 1fr)); }
+            .grid-container { grid-template-columns: repeat(3, 1fr); }
             .social-container { grid-template-columns: 1fr; }
         }
         @media (max-width: 480px) {
@@ -335,7 +335,7 @@
             .header { padding: 0.8rem 1rem; }
             .logo img { height: 35px; }
             .contact-btn-header { font-size: 0.8rem; padding: 0.5rem 1rem; }
-            .grid-container { grid-template-columns: 1fr 1fr; gap: 15px; }
+            .grid-container { grid-template-columns: repeat(3, 1fr); }
             .grid-item { padding: 15px 10px; }
             .icon-container { width: 50px; height: 50px; margin-bottom: 10px; }
             .grid-item h4 { font-size: 0.8rem; }
@@ -695,3 +695,4 @@
     </script>
 </body>
 </html>
+
