--- a/index.html
+++ b/index.html
@@ -169,10 +169,39 @@
         }
         .icon-container img { max-width: 100%; max-height: 100%; object-fit: contain; }
         .grid-item h4 {
-            margin: 0; color: var(--primary-blue); font-size: 1rem;
+            margin: 0; color: var(--primary-blue); font-size: 0.8rem;
             font-weight: 600; line-height: 1.3;
         }
-        
+        .calculator-button-item {
+            grid-column: 1 / -1; /* Membuat item ini memanjang selebar kontainer */
+            flex-direction: row; /* Menjajarkan teks secara horizontal */
+            justify-content: center;
+            align-items: center;
+            min-height: 120px; /* Memberi tinggi minimal agar tidak terlalu tipis */
+            position: relative; /* Diperlukan untuk overlay */
+            overflow: hidden; /* Memastikan sudut border-radius bekerja */
+            padding: 1rem;
+            
+            /* Menambahkan gambar latar belakang */
+            background-image: linear-gradient(rgba(7, 110, 179, 0.6), rgba(13, 59, 90, 0.8)), url('https://yanoshijapan.github.io/asetonline/jastip-banner-calc.jpg');
+            background-size: cover;
+            background-position: center;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .calculator-button-item:hover {
+            transform: scale(1.02); /* Efek zoom saat disentuh mouse */
+            box-shadow: 0 15px 30px rgba(0,0,0,0.2);
+        }
+
+        .calculator-button-item h4 {
+            color: var(--white);
+            font-size: 1.5rem; /* Membuat teks lebih besar */
+            font-weight: 700;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Bayangan teks agar mudah dibaca */
+            margin: 0;
+            padding: 0;
+        }
         /* ----- Universal Modal Styling (from Calculator) ----- */
         .modal {
             position: fixed; z-index: 2000; left: 0; top: 0;
@@ -341,6 +370,8 @@
             .grid-item h4 { font-size: 0.8rem; }
             .link-images-container, .social-container { gap: 15px; }
             .modal-content { padding: 1.5rem; }
+            .calculator-button-item h4 { font-size: 1.1rem; }
+            .calculator-button-item { min-height: 100px; }
         }
     </style>
 </head>
@@ -389,9 +420,8 @@
                 <div class="icon-container"><img src="https://yanoshijapan.github.io/jastip/icon6.png" alt="Tanya Jawab"></div>
                 <h4>Tanya Jawab</h4>
             </div>
-            <div class="grid-item" data-modal-id="calculator-modal-form">
-                <div class="icon-container"><img src="https://yanoshijapan.github.io/asetonline/calculator-icon.png" alt="Kalkulator Biaya"></div>
-                <h4>Kalkulator Biaya</h4>
+            <div class="grid-item calculator-button-item" data-modal-id="calculator-modal-form">
+                <h4>Cek Estimasi Biaya Jastip Disini!</h4>
             </div>
         </section>
 
@@ -695,4 +725,5 @@
     </script>
 </body>
 </html>
+
 
