--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         h2, h3 {
             text-align: center;
-            font-size: 1.0rem;
+            font-size: 1.5rem;
             letter-spacing: 1px;
             margin: 25px 0 15px 0;
             color: var(--primary-blue);
@@ -169,7 +169,7 @@
         }
         .icon-container img { max-width: 100%; max-height: 100%; object-fit: contain; }
         .grid-item h4 {
-            margin: 0; color: var(--primary-blue); font-size: 0.6rem;
+            margin: 0; color: var(--primary-blue); font-size: 1.0rem;
             font-weight: 600; line-height: 1.3;
         }
         .calculator-button-item {
@@ -358,6 +358,7 @@
         @media (max-width: 768px) {
             .grid-container { grid-template-columns: repeat(3, 1fr); }
             .social-container { grid-template-columns: 1fr; }
+            .grid-item h4 { margin: 0; color: var(--primary-blue); font-size: 0.8rem; font-weight: 600; line-height: 1.3; }
         }
         @media (max-width: 480px) {
             h3 { font-size: 1.2rem; }
@@ -725,6 +726,7 @@
     </script>
 </body>
 </html>
+
 
 
 
