--- a/index.html
+++ b/index.html
@@ -356,9 +356,10 @@
         
         /* ----- Responsive Design ----- */
         @media (max-width: 768px) {
+            h3 { font-size: 0.8rem; }
             .grid-container { grid-template-columns: repeat(3, 1fr); }
             .social-container { grid-template-columns: 1fr; }
-            .grid-item h4 { margin: 0; color: var(--primary-blue); font-size: 0.8rem; font-weight: 600; line-height: 1.3; }
+            .grid-item h4 { font-size: 0.6rem; font-weight: 600; }
         }
         @media (max-width: 480px) {
             h3 { font-size: 1.2rem; }
@@ -726,6 +727,7 @@
     </script>
 </body>
 </html>
+
 
 
 
