--- a/index.html
+++ b/index.html
@@ -359,6 +359,8 @@
             h3 { font-size: 0.8rem; }
             .grid-container { grid-template-columns: repeat(3, 1fr); }
             .social-container { grid-template-columns: 1fr; }
+            .grid-item { padding: 15px 10px; }
+            .icon-container { width: 50px; height: 50px; margin-bottom: 10px; }
             .grid-item h4 { font-size: 0.6rem; font-weight: 600; }
         }
         @media (max-width: 480px) {
@@ -727,6 +729,7 @@
     </script>
 </body>
 </html>
+
 
 
 
