--- a/index.html
+++ b/index.html
@@ -364,14 +364,14 @@
             .grid-item h4 { font-size: 0.6rem; font-weight: 600; }
         }
         @media (max-width: 480px) {
-            h3 { font-size: 1.2rem; }
+            h3 { font-size: 0.8rem; }
             .header { padding: 0.8rem 1rem; }
             .logo img { height: 35px; }
             .contact-btn-header { font-size: 0.8rem; padding: 0.5rem 1rem; }
             .grid-container { grid-template-columns: repeat(3, 1fr); }
             .grid-item { padding: 15px 10px; }
             .icon-container { width: 50px; height: 50px; margin-bottom: 10px; }
-            .grid-item h4 { font-size: 0.8rem; }
+            .grid-item h4 { font-size: 0.6rem; }
             .link-images-container, .social-container { gap: 15px; }
             .modal-content { padding: 1.5rem; }
             .calculator-button-item h4 { font-size: 1.1rem; }
@@ -406,23 +406,23 @@
             </div>
             <div class="grid-item" data-modal-id="modal2">
                 <div class="icon-container"><img src="https://yanoshijapan.github.io/jastip/icon2.png" alt="Kenapa Yanoshi"></div>
-                <h4>Kenapa Yanoshi</h4>
+                <h4>Kenapa Harus Yanoshi</h4>
             </div>
             <div class="grid-item" data-modal-id="modal3">
                 <div class="icon-container"><img src="https://yanoshijapan.github.io/jastip/icon3.png" alt="Ketentuan Barang"></div>
-                <h4>Ketentuan Barang</h4>
+                <h4>Ketentuan Barang Bawaan</h4>
             </div>
             <div class="grid-item" data-modal-id="modal4">
                 <div class="icon-container"><img src="https://yanoshijapan.github.io/jastip/icon4.png" alt="Daftar Harga"></div>
-                <h4>Daftar Harga</h4>
+                <h4>Daftar Harga Jastip</h4>
             </div>
             <div class="grid-item" data-modal-id="modal5">
                 <div class="icon-container"><img src="https://yanoshijapan.github.io/jastip/icon5.png" alt="Jadwal"></div>
-                <h4>Jadwal</h4>
+                <h4>Jadwal Keberangkatan Jastip</h4>
             </div>
             <div class="grid-item" data-modal-id="modal6">
                 <div class="icon-container"><img src="https://yanoshijapan.github.io/jastip/icon6.png" alt="Tanya Jawab"></div>
-                <h4>Tanya Jawab</h4>
+                <h4>Tanya Jawab Interaktif</h4>
             </div>
             <div class="grid-item calculator-button-item" data-modal-id="calculator-modal-form">
                 <h4>Cek Estimasi Biaya Jastip Disini!</h4>
@@ -729,6 +729,7 @@
     </script>
 </body>
 </html>
+
 
 
 
