--- a/index.html
+++ b/index.html
@@ -385,6 +385,9 @@
             .calculator-button-item h4 { font-size: 1.1rem; }
             .calculator-button-item { min-height: 100px; }
         }
+        .jastip-title {
+            letter-spacing: -2px; /* UBAH NILAI INI UNTUK MENGATUR KERAPATAN */
+        }
     </style>
 </head>
 <body>
@@ -438,7 +441,7 @@
         </section>
 
         <div class="fade-in-section">
-            <h3>Klik tombol di bawah untuk daftar Jastip!</h3>
+            <h3 class="jastip-title">Klik tombol di bawah<br>untuk daftar Jastip!</br></h3>
             <section class="link-images-container">
                 <div class="link-image">
                     <a href="https://yanoshijapan.github.io/jastipindojepang/" target="_blank">
@@ -460,7 +463,7 @@
         </section>
 
         <div class="fade-in-section">
-            <h3>Follow Sosmed Kami</h3>
+            <h3 class="jastip-title">Follow Sosmed Kami</h3>
             <section class="social-container">
                 <div class="social-embed">
                     <a href="https://www.instagram.com/yanoshi_jastip" target="_blank" class="social-button">Instagram</a>
@@ -474,7 +477,7 @@
         </div>
 
         <div class="fade-in-section">
-            <h3>Beli oleh-oleh Jepang online, klik gambar dibawah ini ya!</h3>
+            <h3 class="jastip-title">Beli oleh-oleh Jepang online,<br>klik gambar dibawah ini ya!</br></h3>
             <section class="single-promo">
                 <a href="https://yanoshistore.netlify.app/" target="_blank">
                     <img src="https://yanoshijapan.github.io/jastip/belio.jpg" alt="Promo Final">
@@ -737,6 +740,7 @@
     </script>
 </body>
 </html>
+
 
 
 
