--- a/index.html
+++ b/index.html
@@ -378,6 +378,12 @@
         .jastip-title {
             letter-spacing: -1px;
         }
+        #terms-text img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 10px 0;
+        }
     </style>
 </head>
 <body>
@@ -625,8 +631,12 @@
                         <li>Action Figure & Merchandise Anime</li>
                         <li>Barang Elektronik, Rokok & Vape (konsultasi ke CS terlebih dahulu ya)</li>
                     </ul>
-                    <img src="https://yanoshijapan.github.io/asetonline/barangumum.jpg" alt="Barang Dilarang Umum">
-                    <img src="https://yanoshijapan.github.io/asetonline/barangspesifik.jpg" alt="Barang Dilarang Spesifik">
+                    <div id="terms-text">
+
+                        <img src="https://yanoshijapan.github.io/asetonline/barangumum.jpg" alt="Barang Dilarang Umum">
+                        <img src="https://yanoshijapan.github.io/asetonline/barangspesifik.jpg" alt="Barang Dilarang Spesifik">
+                    
+                    </div>
                     <p style='margin-top:1em;'>
                         Kita gak nerima barang ilegal, mudah terbakar, atau yang dilarang oleh peraturan bea cukai ya.
                     </p>
@@ -884,6 +894,7 @@
     </script>
 </body>
 </html>
+
 
 
 
