--- a/index.html
+++ b/index.html
@@ -654,6 +654,8 @@
                         <li><strong>Liquid rokok elektrik:</strong> 500 yen/unit.</li>
                         <li><strong>Sepatu dengan box:</strong> 2.000 yen/pasang.</li>
                         <li><strong>Sepatu tanpa box:</strong> 1.500 yen/pasang.</li>
+                        <li><strong>Makanan dengan kemasan besar (contoh : mie cup, coklat dengan box besar, dll)</strong> Dikenakan harga dimensi. Silakan <a href="https://wa.me/6281315431551?text=halo%20min!,%20mau%20tanya%20Jastip%20dimensi%20makanan" target="_blank">hubungi admin disini</a>.</li>
+                        <li><strong>Action figure dan mainan dengan kemasan besar</strong> Dikenakan harga dimensi. Silakan <a href="https://wa.me/6281315431551?text=halo%20min!,%20mau%20tanya%20Jastip%20action%20figure" target="_blank">hubungi admin disini</a>.</li>
                     </ul>
                     <p style='margin-top:1em; font-size: smaller;'>
                         Harga belum termasuk ongkos kirim barang ke basecamp.
@@ -894,6 +896,7 @@
     </script>
 </body>
 </html>
+
 
 
 
