--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
                     <img id="yamato-box-image" src="https://yanoshijapan.github.io/asetonline/boxs.png" alt="Ukuran Box Yamato">
                 </div>
             </div>
-            <p class="tax-note">Harga belum termasuk tax 10% dari Yamato Bandara Narita.</p>
+            <p class="tax-note">Harga sudah include tax JPY</p>
             <button class="modal-close-btn">Tutup</button>
         </div>
     </div>
@@ -1024,5 +1024,6 @@
     </script>
 </body>
 </html>
+
 
 
