--- a/index.html
+++ b/index.html
@@ -979,9 +979,45 @@
                     <i data-lucide="x" class="w-6 h-6"></i>
                 </button>
             </div>
+			
             <div class="modal-body p-6 text-gray-700">
-                <p><strong>Jadwal bulan Oktober:</strong></p><ul><li><strong>Batch 1 (Close) :</strong><ul><li><strong>Indonesia > Jepang:</strong> 16 Oktober 2025 (Close)</li><li><strong>Jepang > Indonesia:</strong> 22 Oktober 2025 (Close)</li></ul></li><li><strong>Batch 2 :</strong><ul><li><strong>Indonesia > Jepang:</strong> 28 Oktober 2025 (Full)</li></ul></li></ul><p><strong>Jadwal bulan November:</strong></p><ul><li><strong>Jepang > Indonesia:</strong> 4 November 2025</li></ul></li></ul><p><strong>Jadwal bulan November:</strong></p><ul><li><strong>Indonesia > Jepang:</strong> 22 November 2025</li></ul>
-            </div>
+  
+			  <div class="mb-4">
+			    <p class="mb-2"><strong>Jadwal bulan Oktober:</strong></p>
+			    <ul style="list-style-type: disc; padding-left: 20px;">
+			      <li>
+			        <strong>Batch 1 (Close) :</strong>
+			        <ul style="list-style-type: circle; padding-left: 20px; margin-top: 4px;">
+			          <li><strong>Indonesia &gt; Jepang:</strong> 16 Oktober 2025 (Close)</li>
+			          <li><strong>Jepang &gt; Indonesia:</strong> 22 Oktober 2025 (Close)</li>
+			        </ul>
+			      </li>
+			      <li style="margin-top: 8px;">
+			        <strong>Batch 2 (Close) :</strong>
+			        <ul style="list-style-type: circle; padding-left: 20px; margin-top: 4px;">
+			          <li><strong>Indonesia &gt; Jepang:</strong> 28 Oktober 2025 (Close)</li>
+			        </ul>
+			      </li>
+			    </ul>
+			  </div>
+			
+			  <div>
+			    <p class="mb-2"><strong>Jadwal bulan November (Close):</strong></p>
+			    <ul style="list-style-type: disc; padding-left: 20px;">
+			      <li><strong>Jepang &gt; Indonesia:</strong> 4 November 2025 (Close)</li>
+			      <li><strong>Indonesia &gt; Jepang:</strong> 22 November 2025 (Close)</li>
+			    </ul>
+			  </div>
+			  <div>
+			    <p class="mb-2"><strong>Jadwal mendatang:</strong></p>
+			    <ul style="list-style-type: disc; padding-left: 20px;">
+			      <li><strong>Indonesia &gt; Jepang:</strong> 11 Desember 2025</li>
+				  <li><strong>Indonesia &gt; Jepang:</strong> Januari 2025</li>
+			    </ul>
+			  </div>
+			
+			</div>
+			
             <div class="p-4 border-t bg-gray-50 rounded-b-2xl flex justify-end">
                 <button class="modal-close-btn btn-ripple bg-amber-500 hover:bg-amber-600 text-white font-bold py-2 px-6 rounded-full transition-all">
                     Tutup
@@ -1548,3 +1584,4 @@
     </script>
 </body>
 </html>
+
