--- a/index.html
+++ b/index.html
@@ -973,49 +973,47 @@
 
     <div id="modal5" class="modal fixed inset-0 z-[2000] flex items-center justify-center bg-black/60 backdrop-blur-sm p-4 hidden">
         <div class="modal-content bg-white rounded-2xl shadow-2xl w-full max-w-lg max-h-[90vh] flex flex-col">
-            <div class="flex justify-between items-center p-6 border-b">
-                <h3 class="text-2xl font-bold text-blue-600">Jadwal Keberangkatan</h3>
-                <button class="modal-close-btn text-gray-400 hover:text-gray-600 transition-colors">
-                    <i data-lucide="x" class="w-6 h-6"></i>
-                </button>
-            </div>
+            
+			<div class="flex justify-between items-center p-6 border-b">
+			    <h3 class="text-2xl font-bold text-blue-600">Jadwal Keberangkatan</h3>
+			    <button class="modal-close-btn text-gray-400 hover:text-gray-600 transition-colors">
+			        <i data-lucide="x" class="w-6 h-6"></i>
+			    </button>
+			</div>
 			
-            <div class="modal-body p-6 text-gray-700">
-  
-			  <div class="mb-4">
-			    <p class="mb-2"><strong>Jadwal bulan Oktober:</strong></p>
-			    <ul style="list-style-type: disc; padding-left: 20px;">
-			      <li>
-			        <strong>Batch 1 (Close) :</strong>
-			        <ul style="list-style-type: circle; padding-left: 20px; margin-top: 4px;">
-			          <li><strong>Indonesia &gt; Jepang:</strong> 16 Oktober 2025 (Close)</li>
-			          <li><strong>Jepang &gt; Indonesia:</strong> 22 Oktober 2025 (Close)</li>
+			<div class="modal-body p-6 text-gray-700">
+			    <div class="mb-4">
+			        <p class="mb-2"><strong>Jadwal bulan Oktober:</strong></p>
+			        <ul style="list-style-type: disc; padding-left: 20px;">
+			            <li>
+			                <strong>Batch 1 (Close) :</strong>
+			                <ul style="list-style-type: circle; padding-left: 20px; margin-top: 4px;">
+			                    <li><strong>Indonesia &gt; Jepang:</strong> 16 Oktober 2025 (Close)</li>
+			                    <li><strong>Jepang &gt; Indonesia:</strong> 22 Oktober 2025 (Close)</li>
+			                </ul>
+			            </li>
+			            <li style="margin-top: 8px;">
+			                <strong>Batch 2 (Close) :</strong>
+			                <ul style="list-style-type: circle; padding-left: 20px; margin-top: 4px;">
+			                    <li><strong>Indonesia &gt; Jepang:</strong> 28 Oktober 2025 (Close)</li>
+			                </ul>
+			            </li>
 			        </ul>
-			      </li>
-			      <li style="margin-top: 8px;">
-			        <strong>Batch 2 (Close) :</strong>
-			        <ul style="list-style-type: circle; padding-left: 20px; margin-top: 4px;">
-			          <li><strong>Indonesia &gt; Jepang:</strong> 28 Oktober 2025 (Close)</li>
+			    </div>
+			
+			    <div class="mb-4"> <p class="mb-2"><strong>Jadwal bulan November (Close):</strong></p>
+			        <ul style="list-style-type: disc; padding-left: 20px;">
+			            <li><strong>Jepang &gt; Indonesia:</strong> 4 November 2025 (Close)</li>
+			            <li><strong>Indonesia &gt; Jepang:</strong> 22 November 2025 (Close)</li>
 			        </ul>
-			      </li>
-			    </ul>
-			  </div>
+			    </div>
 			
-			  <div>
-			    <p class="mb-2"><strong>Jadwal bulan November (Close):</strong></p>
-			    <ul style="list-style-type: disc; padding-left: 20px;">
-			      <li><strong>Jepang &gt; Indonesia:</strong> 4 November 2025 (Close)</li>
-			      <li><strong>Indonesia &gt; Jepang:</strong> 22 November 2025 (Close)</li>
-			    </ul>
-			  </div>
-			  <div>
-			    <p class="mb-2"><strong>Jadwal mendatang:</strong></p>
-			    <ul style="list-style-type: disc; padding-left: 20px;">
-			      <li><strong>Indonesia &gt; Jepang:</strong> 11 Desember 2025</li>
-				  <li><strong>Indonesia &gt; Jepang:</strong> Januari 2025</li>
-			    </ul>
-			  </div>
-			
+			    <div class="mt-4"> <p class="mb-2"><strong>Jadwal mendatang:</strong></p>
+			        <ul style="list-style-type: disc; padding-left: 20px;">
+			            <li><strong>Indonesia &gt; Jepang:</strong> 11 Desember 2025</li>
+			            <li><strong>Indonesia &gt; Jepang:</strong> Januari 2026</li>
+			        </ul>
+			    </div>
 			</div>
 			
             <div class="p-4 border-t bg-gray-50 rounded-b-2xl flex justify-end">
@@ -1584,4 +1582,5 @@
     </script>
 </body>
 </html>
+
 
