--- a/index.html
+++ b/index.html
@@ -900,9 +900,63 @@
                     <i data-lucide="x" class="w-6 h-6"></i>
                 </button>
             </div>
-            <div class="modal-body p-6 text-gray-700">
-                <p>Hai para pejuang barang impian! Kenalan yuk sama Yanoshi Jastip, solusi jastip paling asyik dan terpercaya buat kamu yang butuh kirim-kirim barang dari Jepang ke Indonesia atau sebaliknya.<br><br><strong>Buat yang lagi di Jepang:</strong> Lagi kangen masakan rumah tapi bumbu nggak ada? Butuh skincare kesayangan atau obat-obatan penting dari Indonesia? Atau dokumen yang ketinggalan? Tenang, nggak perlu terbang pulang! Yanoshi siap bawain semua itu langsung ke Jepang. Pulang ke Indonesia bawaan numpuk? Aduh, jangan pusing! Titipin aja barang-barangmu, mulai dari baju, elektronik, sampai oleh-oleh Jepang yang super banyak itu. Kami yang urus antar sampai alamat di Indonesia.<br><br><strong>Buat yang di Indonesia:</strong> Ngiler sama produk Jepang terbaru tapi mager ke sana? Tenang aja! Yanoshi hadir buat bikin belanjamu makin gampang. Tinggal tunjuk, kami yang datangkan barangnya dari Jepang ke rumahmu. Gampang kan?.</p>
-            </div>
+            <div class="modal-body p-6 text-gray-700 text-sm leading-relaxed h-[60vh] overflow-y-auto">
+			    <h3 class="font-bold text-lg mb-3 text-gray-900">Yuk Kenalan Lebih Dekat dengan Jastip by Yanoshi!</h3>
+			    
+			    <p class="mb-4">
+			        Halo semua! Sudah tahu belum kalau <strong>Jastip by Yanoshi</strong> siap jadi solusi buat kebutuhan kirim dan belanja barang impianmu dari Indonesia ke Jepang, atau sebaliknya?
+			        <br><br>
+			        Kami hadir untuk menjembatani barang-barang favoritmu melintasi batas negara. Praktis, aman, dan terpercaya! Kami punya dua layanan utama. Yuk, lihat perbedaannya:
+			    </p>
+			
+			    <hr class="my-4 border-gray-200">
+			
+			    <div class="mb-6">
+			        <h4 class="font-bold text-base text-blue-700 mb-2">1. Titip Kirim</h4>
+			        <p class="mb-3">
+			            Layanan ini pas banget buat kamu yang ingin mengirimkan barang, baik dari Indonesia maupun dari Jepang, tapi barangnya sudah kamu miliki atau sudah kamu pesan sendiri secara online/dari pihak ketiga (keluarga, teman, pasangan, dsb.).
+			        </p>
+			
+			        <div class="bg-gray-50 p-4 rounded-lg border border-gray-100">
+			            <strong class="block mb-2 text-gray-800">Gimana Caranya Titip kirim di Yanoshi Jastip?</strong>
+			            <ol class="list-decimal pl-5 space-y-2">
+			                <li><strong>Konsultasi:</strong> DM/Chat via Line untuk konsultasi barang dan jadwal pengiriman.</li>
+			                <li><strong>Isi Formulir:</strong> Isi formulir jastip dengan data yang benar dan lengkap.</li>
+			                <li><strong>Kirim ke Warehouse:</strong> Kirimkan barang atau pesan barang online langsung ke alamat warehouse kami (di Indonesia/Jepang).</li>
+			                <li><strong>Konfirmasi Kedatangan:</strong> Kirim resi pengiriman atau screenshot bukti pembelian online ke admin kami.</li>
+			                <li><strong>Proses Warehouse:</strong> Setelah paket tiba, tim Jastip akan melakukan repacking, penimbangan, dan pengukuran ulang.</li>
+			                <li><strong>Cek Kelengkapan:</strong> Tunggu konfirmasi kelengkapan dan kesesuaian barang.</li>
+			                <li><strong>Pembayaran:</strong> Invoice terbit, segera lakukan pelunasan.</li>
+			                <li><strong>Barang Dikirim:</strong> Barang siap dikirim sesuai jadwal.</li>
+			                <li><strong>Terima Resi:</strong> Resi ekspedisi domestik akan diterbitkan setelah paket terkirim.</li>
+			            </ol>
+			        </div>
+			    </div>
+			
+			    <div class="mb-4">
+			        <h4 class="font-bold text-base text-blue-700 mb-2">2. Titip Belanja</h4>
+			        <p class="mb-1">
+			            Ingin barang incaranmu dibelikan langsung oleh tim Jastip kami? Layanan ini pilihan yang paling tepat! Kami akan bantu belanjakan barang-barang impian dan kebutuhanmu, baik dari Indonesia maupun dari Jepang.
+			        </p>
+			        <p class="text-xs text-red-500 italic mb-3">*khusus belanja akan dikenakan biaya tambahan admin belanja</p>
+			
+			        <div class="bg-gray-50 p-4 rounded-lg border border-gray-100">
+			            <strong class="block mb-2 text-gray-800">Gimana Caranya Titip belanja di Yanoshi Jastip?</strong>
+			            <ol class="list-decimal pl-5 space-y-2">
+			                <li><strong>Konsultasi & Request:</strong> DM/Chat via Line untuk konsultasi barang dan jadwal.</li>
+			                <li><strong>Berikan Detail:</strong> Kirimkan foto atau link toko online (jika ada pembelian online) untuk barang yang ingin dibeli.</li>
+			                <li><strong>Isi Formulir:</strong> Isi formulir jastip dengan benar dan lengkap.</li>
+			                <li><strong>Pembayaran DP:</strong> Admin akan menentukan budget belanja untuk DP (Down Payment).</li>
+			                <li><strong>Proses Belanja:</strong> Setelah DP dibayarkan, barang akan segera kami proses belanjakan.</li>
+			                <li><strong>Proses Warehouse:</strong> Setelah paket tiba di warehouse, tim Jastip akan melakukan repacking, penimbangan, dan pengukuran ulang.</li>
+			                <li><strong>Cek Kelengkapan:</strong> Tunggu konfirmasi kelengkapan dan kesesuaian barang.</li>
+			                <li><strong>Pelunasan:</strong> Invoice terbit, segera lakukan pelunasan.</li>
+			                <li><strong>Barang Dikirim:</strong> Barang siap dikirim sesuai jadwal.</li>
+			                <li><strong>Terima Resi:</strong> Resi ekspedisi domestik akan diterbitkan setelah paket terkirim.</li>
+			            </ol>
+			        </div>
+			    </div>
+			</div>
             <div class="p-4 border-t bg-gray-50 rounded-b-2xl flex justify-end">
                 <button class="modal-close-btn btn-ripple bg-amber-500 hover:bg-amber-600 text-white font-bold py-2 px-6 rounded-full transition-all">
                     Tutup
@@ -1582,5 +1636,6 @@
     </script>
 </body>
 </html>
+
 
 
